examples/test/testpolicy7625.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7625
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key37: value11
      key47: value2
      key8: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value31
      podSelector:
        matchLabels:
          key39: value1
          key14: value47
          key38: value28
